Update Language Files

--- a/kubejs/assets/kubejs/lang/en_us.json
+++ b/kubejs/assets/kubejs/lang/en_us.json
@@ -3,121 +3,111 @@
 	"kubejs.attribute.name.generic.armor_toughness": "\uEA06",
 	"kubejs.attribute.name.generic.knockback_resistance": "\uEA03",
 	"kjs.comment": "manaAffinity Part======================================",
-	"text.kubejs.tooltips.strongreject": "§5法术亲和:强排斥",
-	"text.kubejs.tooltips.reject": "§5法术亲和:排斥",
-	"text.kubejs.tooltips.weakreject": "§5法术亲和:弱排斥",
-	"text.kubejs.tooltips.stable": "§5法术亲和:稳定",
-	"text.kubejs.tooltips.weakaffinity": "§5法术亲和:弱魔质",
-	"text.kubejs.tooltips.strongaffinity": "§5法术亲和:强魔质",
-	"text.kubejs.tooltips.extremeaffinity": "§5法术亲和:极魔质",
+	"text.kubejs.tooltips.strongreject": "§5Mana Affinity:strong reject",
+	"text.kubejs.tooltips.reject": "§5manaAffinity:reject",
+	"text.kubejs.tooltips.weakreject": "§5Mana Affinity:weak reject",
+	"text.kubejs.tooltips.stable": "§5Mana Affinity:stable",
+	"text.kubejs.tooltips.weakaffinity": "§5Mana Affinity:weak affinity",
+	"text.kubejs.tooltips.strongaffinity": "§5Mana Affinity:strong affinity",
+	"text.kubejs.tooltips.extremeaffinity": "§5Mana Affinity:extreme affinity",
 	"kjs.comment_": "weightClass Part=======================================",
-	"text.kubejs.tooltips.verylight": "§e重量等级:轻盈",
-	"text.kubejs.tooltips.light": "§e重量等级:较轻",
-	"text.kubejs.tooltips.common": "§e重量等级:正常",
-	"text.kubejs.tooltips.heavy": "§e重量等级:偏重",
-	"text.kubejs.tooltips.veryheavy": "§e重量等级:沉重",
-	"text.kubejs.tooltips.extremelyheavy": "§e重量等级:极重",
+	"text.kubejs.tooltips.verylight": "§eWeight Class:very light",
+	"text.kubejs.tooltips.light": "§eWeight Class:light",
+	"text.kubejs.tooltips.common": "§eWeight Class:common",
+	"text.kubejs.tooltips.heavy": "§eWeight Class:heavy",
+	"text.kubejs.tooltips.veryheavy": "§eWeight Class:very heavy",
+	"text.kubejs.tooltips.extremelyheavy": "§eWeight Class:extremely heavy",
 	"kjs.comment__": "weaponType Part======================",
-	"text.kubejs.tooltips.dagger": "§e武器类型:匕首",
-	"text.kubejs.tooltips.gauntlet": "§e武器类型:拳套",
-	"text.kubejs.tooltips.sickle": "§e武器类型:单手镰",
-	"text.kubejs.tooltips.shortsword": "§e武器类型:短剑",
-	"text.kubejs.tooltips.sword": "§e武器类型:直剑",
-	"text.kubejs.tooltips.spear": "§e武器类型:单手矛",
-	"text.kubejs.tooltips.rapier": "§e武器类型:迅捷剑",
-	"text.kubejs.tooltips.axe": "§e武器类型:单手斧",
-	"text.kubejs.tooltips.mace": "§e武器类型:单手杖",
-	"text.kubejs.tooltips.wand": "§e武器类型:单手魔杖",
-	"text.kubejs.tooltips.magicartifact": "§e武器类型:魔导法器",
-	"text.kubejs.tooltips.convertible_into_magicartifact": "§e可魔导化为魔导法器",
-	"text.kubejs.tooltips.grimoire": "§e武器类型:魔导书",
-	"text.kubejs.tooltips.convertible_into_grimoire": "§e可魔导化为魔导书",
-	"text.kubejs.tooltips.staff": "§e武器类型:双手魔杖",
-	"text.kubejs.tooltips.shortbow": "§e武器类型:短弓",
-	"text.kubejs.tooltips.longbow": "§e武器类型:长弓",
-	"text.kubejs.tooltips.rapidcrossbow": "§e武器类型:轻弩",
-	"text.kubejs.tooltips.heavycrossbow": "§e武器类型:重弩",
-	"text.kubejs.tooltips.katana": "§e武器类型:武士刀'",
-	"text.kubejs.tooltips.bastardsword": "§e武器类型:手半剑",
-	"text.kubejs.tooltips.pike": "§e武器类型:长矛",
-	"text.kubejs.tooltips.glaive": "§e武器类型:长柄刀",
-	"text.kubejs.tooltips.tachi": "§e武器类型:长刀",
-	"text.kubejs.tooltips.scythe": "§e武器类型:双手镰",
-	"text.kubejs.tooltips.poleaxe": "§e武器类型:长柄斧",
-	"text.kubejs.tooltips.greatsword": "§e武器类型:长戟",
-	"text.kubejs.tooltips.halberd": "§e武器类型:双手巨剑",
-	"text.kubejs.tooltips.greataxe": "§e武器类型:巨斧",
-	"text.kubejs.tooltips.warhammer": "§e武器类型:重型战锤",
-	"text.kubejs.tooltips.twinblade": "§e武器类型:双头刀",
-	"kjs.comment___": "uniqueAttributes Part======================",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": ""
+	"text.kubejs.tooltips.dagger": "§eWeapon Type:dagger",
+	"text.kubejs.tooltips.gauntlet": "§eWeapon Type:gauntlet",
+	"text.kubejs.tooltips.sickle": "§eWeapon Type:sickle",
+	"text.kubejs.tooltips.shortsword": "§eWeapon Type:shortsword",
+	"text.kubejs.tooltips.sword": "§eWeapon Type:sword",
+	"text.kubejs.tooltips.spear": "§eWeapon Type:spear",
+	"text.kubejs.tooltips.rapier": "§eWeapon Type:rapier",
+	"text.kubejs.tooltips.axe": "§eWeapon Type:axe",
+	"text.kubejs.tooltips.mace": "§eWeapon Type:mace",
+	"text.kubejs.tooltips.wand": "§eWeapon Type:wand",
+	"text.kubejs.tooltips.magicartifact": "§eWeapon Type:magic artifact",
+	"text.kubejs.tooltips.convertible_into_magicartifact": "§econvertible into magic artifact",
+	"text.kubejs.tooltips.grimoire": "§eWeapon Type:grimoire",
+	"text.kubejs.tooltips.convertible_into_grimoire": "§econvertible into grimoire",
+	"text.kubejs.tooltips.staff": "§eWeapon Type:staff",
+	"text.kubejs.tooltips.shortbow": "§eWeapon Type:shortbow",
+	"text.kubejs.tooltips.longbow": "§eWeapon Type:longbow",
+	"text.kubejs.tooltips.rapidcrossbow": "§eWeapon Type:rapidcrossbow",
+	"text.kubejs.tooltips.heavycrossbow": "§eWeapon Type:heavycrossbow",
+	"text.kubejs.tooltips.katana": "§eWeapon Type:katana'",
+	"text.kubejs.tooltips.bastardsword": "§eWeapon Type:bastardsword",
+	"text.kubejs.tooltips.pike": "§eWeapon Type:pike",
+	"text.kubejs.tooltips.glaive": "§eWeapon Type:glaive",
+	"text.kubejs.tooltips.tachi": "§eWeapon Type:tachi",
+	"text.kubejs.tooltips.scythe": "§eWeapon Type:scythe",
+	"text.kubejs.tooltips.poleaxe": "§eWeapon Type:poleaxe",
+	"text.kubejs.tooltips.greatsword": "§eWeapon Type:greatsword",
+	"text.kubejs.tooltips.halberd": "§eWeapon Type:halberd",
+	"text.kubejs.tooltips.greataxe": "§eWeapon Type:greataxe",
+	"text.kubejs.tooltips.warhammer": "§eWeapon Type:warhammer",
+	"text.kubejs.tooltips.twinblade": "§eWeapon Type:twinblade",
+	"kjs.comment___": "armorSpecificAttributes Part======================",
+	"text.kubejs.tooltips.armorspecificattributes": "§6Armor Specific Attributes:",
+	"text.kubejs.tooltips.slotspecificattributes": "§6Slot Specific Attributes:",
+	"text.kubejs.tooltips.movementspeedset": "§6Armor Specific Attributes:additional movementspeed",
+	"text.kubejs.tooltips.movementspeedslot": "§6Slot Specific Attributes:additional movementspeed",
+	"text.kubejs.tooltips.manaregenslot": "§6Slot Specific Attributes:additional manaregen",
+	"text.kubejs.tooltips.manaregenset": "§6Armor Specific Attributes:additional manaregen",
+	"text.kubejs.tooltips.soulspellpower": "§6Slot Specific Attributes:additional soul spellpower",
+	"text.kubejs.tooltips.spellhaste": "§6Slot Specific Attributes:additional spell haste",
+	"text.kubejs.tooltips.spellcriticalchance": "§6Slot Specific Attributes:additional spell critical chance",
+	"text.kubejs.tooltips.spellcriticaldamage": "§6Slot Specific Attributes:additional spell critical damage",
+	"text.kubejs.tooltips.movementspeedandattackspeed": "§6Armor Specific Attributes:additional movementspeed + attackspeed",
+	"text.kubejs.tooltips.criticalrate": "§6Slot Specific Attributes:additional critical rate",
+	"text.kubejs.tooltips.piercingdamage": "§6Slot Specific Attributes:additional piercing damage",
+	"text.kubejs.tooltips.luck": "§6Slot Specific Attributes:additional luck",
+	"text.kubejs.tooltips.reducedamageslot": "§6Slot Specific Attributes:additional reduce damage",
+	"text.kubejs.tooltips.reducedamageset": "§6Armor Specific Attributes:additional reduce damage",
+	"text.kubejs.tooltips.drawspeed": "§6Slot Specific Attributes:draw speed",
+	"text.kubejs.tooltips.rangeddamageset": "§6Armor Specific Attributes:additional ranged damage",
+	"text.kubejs.tooltips.rangeddamageslot": "§6Slot Specific Attributes:additional ranged damage",
+	"text.kubejs.tooltips.spregen": "§6Slot Specific Attributes:additional spregen",
+	"text.kubejs.tooltips.extraroll": "§6Slot Specific Attributes:additional extraroll",
+	"text.kubejs.tooltips.rollrecharge": "§6Slot Specific Attributes:additional rollrecharge",
+	"text.kubejs.tooltips.spregenperattack": "§6Slot Specific Attributes:additional spregen per attack",
+	"text.kubejs.tooltips.knockbackresistanceset": "§6Armor Specific Attributes:additional knockback resistance",
+	"text.kubejs.tooltips.knockbackresistanceslot": "§6Slot Specific Attributes:additional knockback resistance",
+	"text.kubejs.tooltips.armortoughnessslot": "§6Slot Specific Attributes:additional armortoughnesss",
+	"text.kubejs.tooltips.armortoughnessset": "§6Armor Specific Attributes:additional armortoughnesss",
+	"text.kubejs.tooltips.attackdamageslot": "§6Slot Specific Attributes:additional attackdamage",
+	"text.kubejs.tooltips.attackspeedslot": "§6Slot Specific Attributes:additional attackspeed",
+	"text.kubejs.tooltips.manashieldset": "§6Armor Specific Attributes:additional mana shield",
+	"text.kubejs.tooltips.manashieldslot": "§6Slot Specific Attributes:additional mana shield",
+	"text.kubejs.tooltips.lessspcostslot": "§6Slot Specific Attributes:less sp cost",
+	"text.kubejs.tooltips.maxmanaslot": "§6Slot Specific Attributes:additional max mana",
+	"text.kubejs.tooltips.manaandspregenslot": "§6Slot Specific Attributes:additional mana + sp regen",
+	"text.kubejs.tooltips.armortoughnessandmanashieldset": "§6Armor Specific Attributes:additional armortoughness + manashield",
+	"text.kubejs.tooltips.damagereductionslot": "§6Slot Specific Attributes:additional damage reduction",
+	"text.kubejs.tooltips.increaseddamageslot": "§6Slot Specific Attributes:additional increased damage",
+	"kjs.comment____": "uniqueAttributes Part======================",
+	"text.kubejs.tooltips.weaponreducedamage": "§6Unique Attributes:additional reduce damage",
+	"text.kubejs.tooltips.weaponpiercingdamage": "§6Unique Attributes:additional piercingdamage",
+	"text.kubejs.tooltips.weaponreducedamageandpiercingdamage": "§6Unique Attributes:additional reduce damage + piercingdamage",
+	"text.kubejs.tooltips.weaponcriticalrate": "§6Unique Attributes:additional critical rate",
+	"text.kubejs.tooltips.weapondurable": "§6Unique Attributes:durable",
+	"text.kubejs.tooltips.weapondurableandpiercingdamage": "§6Unique Attributes:durable + additional piercingdamage",
+	"text.kubejs.tooltips.weaponundeadkiller": "§6Unique Attributes:deal additional damage to undead creatures",
+	"text.kubejs.tooltips.weaponlengthening": "§6Unique Attributes:lengthening",
+	"text.kubejs.tooltips.weaponlengtheninganddurable": "§6Unique Attributes:lengthening + durable",
+	"text.kubejs.tooltips.weaponlengtheningandlight": "§6Unique Attributes:lengthening + light",
+	"text.kubejs.tooltips.weaponattackknockback": "§6Unique Attributes:additional attack knockback",
+	"text.kubejs.tooltips.weaponbasicattributes": "§6Unique Attributes:additional basic attributes",
+	"text.kubejs.tooltips.weaponluck": "§6Unique Attributes:additional luck",
+	"text.kubejs.tooltips.weaponlifesteal": "§6Unique Attributes:additional lifesteal",
+	"text.kubejs.tooltips.weaponfrostspellpower": "§6Unique Attributes:additional frost spellpower",
+	"text.kubejs.tooltips.weaponfirespellpower": "§6Unique Attributes:additional fire spellpower",
+	"text.kubejs.tooltips.weapondurableandbasicattributes": "§6Unique Attributes:durable + additional basic attributes",
+	"text.kubejs.tooltips.weaponpoisondamageonhit": "§6Unique Attributes:additional poison damage on hit",
+	"text.kubejs.tooltips.weaponselfrepairsinwater": "§6Unique Attributes:self repairs slowly when submerged in water",
+	"text.kubejs.tooltips.weaponlengtheningandbasicattributes": "§6Unique Attributes:lengthening + additional basic attributes",
+	"text.kubejs.tooltips.weaponlight": "§6Unique Attributes:light",
+	"text.kubejs.tooltips.weaponmanaregenerationinforestbiome": "§6Unique Attributes:additional mana regeneration while in any forest biome"
 }
