--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -46,75 +46,65 @@
 	"text.kubejs.tooltips.greataxe": "§e武器类型:巨斧",
 	"text.kubejs.tooltips.warhammer": "§e武器类型:重型战锤",
 	"text.kubejs.tooltips.twinblade": "§e武器类型:双头刀",
-	"kjs.comment___": "uniqueAttributes Part======================",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": "",
-	"text.kubejs.tooltips.aaaaaaaaa": ""
+	"kjs.comment___": "armorSpecificAttributes Part======================",
+	"text.kubejs.tooltips.armorspecificattributes": "§6套装特性:",
+	"text.kubejs.tooltips.slotspecificattributes": "§6部位独特属性:",
+	"text.kubejs.tooltips.movementspeedset": "§6套装特性:额外的移动速度",
+	"text.kubejs.tooltips.movementspeedslot": "§6部位独特属性:额外的移动速度",
+	"text.kubejs.tooltips.manaregenslot": "§6部位独特属性:额外的法力回复",
+	"text.kubejs.tooltips.manaregenset": "§6套装特性:额外的法力回复",
+	"text.kubejs.tooltips.soulspellpower": "§6部位独特属性:额外的灵魂法术强度",
+	"text.kubejs.tooltips.spellhaste": "§6部位独特属性:额外的法术急速",
+	"text.kubejs.tooltips.spellcriticalchance": "§6部位独特属性:额外的技能暴击率",
+	"text.kubejs.tooltips.spellcriticaldamage": "§6部位独特属性:额外的技能暴击伤害",
+	"text.kubejs.tooltips.movementspeedandattackspeed": "§6套装特性:额外的移动速度和攻击速度",
+	"text.kubejs.tooltips.criticalrate": "§6部位独特属性:额外的暴击率",
+	"text.kubejs.tooltips.piercingdamage": "§6部位独特属性:额外的穿透伤害",
+	"text.kubejs.tooltips.luck": "§6部位独特属性:额外的幸运值",
+	"text.kubejs.tooltips.reducedamageslot": "§6部位独特属性:额外的固定伤害减免",
+	"text.kubejs.tooltips.reducedamageset": "§6套装特性:额外的固定伤害减免",
+	"text.kubejs.tooltips.drawspeed": "§6部位独特属性:弓弩上膛速度",
+	"text.kubejs.tooltips.rangeddamageset": "§6套装特性:额外的远程攻击力",
+	"text.kubejs.tooltips.rangeddamageslot": "§6部位独特属性:额外的远程攻击力",
+	"text.kubejs.tooltips.spregen": "§6部位独特属性:额外的技力回复",
+	"text.kubejs.tooltips.extraroll": "§6部位独特属性:额外的最大回避充能数",
+	"text.kubejs.tooltips.rollrecharge": "§6部位独特属性:额外的回避充能速度",
+	"text.kubejs.tooltips.spregenperattack": "§6部位独特属性:额外的单次攻击技力回复量",
+	"text.kubejs.tooltips.knockbackresistanceset": "§6套装特性:额外的击退抗性",
+	"text.kubejs.tooltips.knockbackresistanceslot": "§6部位独特属性:额外的击退抗性",
+	"text.kubejs.tooltips.armortoughnessslot": "§6部位独特属性:额外的盔甲韧性",
+	"text.kubejs.tooltips.armortoughnessset": "§6套装特性:额外的盔甲韧性",
+	"text.kubejs.tooltips.attackdamageslot": "§6部位独特属性:额外的攻击力",
+	"text.kubejs.tooltips.attackspeedslot": "§6部位独特属性:额外的攻击速度",
+	"text.kubejs.tooltips.manashieldset": "§6套装特性:额外的法力护盾",
+	"text.kubejs.tooltips.manashieldslot": "§6部位独特属性:额外的法力护盾",
+	"text.kubejs.tooltips.lessspcostslot": "§6部位独特属性:更少的技力消耗",
+	"text.kubejs.tooltips.maxmanaslot": "§6部位独特属性:额外的最大法力",
+	"text.kubejs.tooltips.manaandspregenslot": "§6部位独特属性:额外的法力与技力回复",
+	"text.kubejs.tooltips.armortoughnessandmanashieldset": "§6套装特性:额外的盔甲韧性和法力护盾",
+	"text.kubejs.tooltips.damagereductionslot": "§6部位独特属性:额外的百分比伤害减免",
+	"text.kubejs.tooltips.increaseddamageslot": "§6部位独特属性:额外的百分比伤害增加",
+	"kjs.comment____": "uniqueAttributes Part======================",
+	"text.kubejs.tooltips.weaponreducedamage": "§6独特属性:额外的固定伤害减免",
+	"text.kubejs.tooltips.weaponpiercingdamage": "§6独特属性:额外的穿透伤害",
+	"text.kubejs.tooltips.weaponreducedamageandpiercingdamage": "§6独特属性:额外的固定伤害减免和穿透伤害",
+	"text.kubejs.tooltips.weaponcriticalrate": "§6独特属性:额外的暴击率",
+	"text.kubejs.tooltips.weapondurable": "§6独特属性:坚实耐用",
+	"text.kubejs.tooltips.weapondurableandpiercingdamage": "§6独特属性:坚实耐用+额外的穿透伤害",
+	"text.kubejs.tooltips.weaponundeadkiller": "§6独特属性:对亡灵生物造成额外伤害",
+	"text.kubejs.tooltips.weaponlengthening": "§6独特属性:加长",
+	"text.kubejs.tooltips.weaponlengtheninganddurable": "§6独特属性:加长+坚实耐用",
+	"text.kubejs.tooltips.weaponlengtheningandlight": "§6独特属性:加长+轻便",
+	"text.kubejs.tooltips.weaponattackknockback": "§6独特属性:额外的击退能力",
+	"text.kubejs.tooltips.weaponbasicattributes": "§6独特属性:额外的基础属性",
+	"text.kubejs.tooltips.weaponluck": "§6独特属性:额外的幸运值",
+	"text.kubejs.tooltips.weaponlifesteal": "§6独特属性:额外的生命偷取",
+	"text.kubejs.tooltips.weaponfrostspellpower": "§6独特属性:额外的冰霜学派法术强度",
+	"text.kubejs.tooltips.weaponfirespellpower": "§6独特属性:额外的炽焰学派法术强度",
+	"text.kubejs.tooltips.weapondurableandbasicattributes": "§6独特属性:坚实耐用+额外的基础属性",
+	"text.kubejs.tooltips.weaponpoisondamageonhit": "§6独特属性:攻击施加1点中毒伤害",
+	"text.kubejs.tooltips.weaponselfrepairsinwater": "§6独特属性:物品丢入水中缓慢修复自身",
+	"text.kubejs.tooltips.weaponlengtheningandbasicattributes": "§6独特属性:加长+额外的基础属性",
+	"text.kubejs.tooltips.weaponlight": "§6独特属性:轻便",
+	"text.kubejs.tooltips.weaponmanaregenerationinforestbiome": "§6独特属性:位于任意森林群系时提供额外的魔力回复"
 }
